# Convert_to_pdf

./: .env_example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: __init__.py
app/configuration/: server.py
app/configuration/routes/: __init__.py  routes.py
app/database/: __init__.py
app/database/config/: settings.py
app/database/migrations/models/: 0_20230729161653_init.py
app/database/models/: models.py
app/internal/: __init__.py
app/internal/files/: dependencies.py  routers.py  schemas.py
app/internal/user/: dependencies.py  handlers.py  schemas.py
app/repositories/: __init__.py  files.py  user.py
app/services/: __init__.py  files.py  redis.py  user.py
app/utils/: __init__.py  convert.py  converting.py  docx2pdf.py  format_file.py  repository.py  wrapper.py
app/utils/auth/: __init__.py  current_user.py  decorator.py  hashing.py  token.py
app/worker/: tasks.py
docker/: Dockerfile
docker/api/: Dockerfile
tests/: conftest.py  test_endpoints.py  test_file.py  test_user.py
tests/filetest/: path_file.py
